--- a/official_report/thesis_FINAL/main.tex
+++ b/official_report/thesis_FINAL/main.tex
@@ -22,16 +22,7 @@ The acknowledgments and the people to thank go here, don't forget to include you
 
 %\begin{abstract}
 \chapter*{Abstract} \addcontentsline{toc}{chapter}{Abstract}
-Process enhancement is one of the three main focus in process mining. Model repair, as an important part of process enhancement, improves an existing process model by fixing the deviation between the model and the actual execution recorded into an event log. Meanwhile, it aims to keep the new generated model as similar as possible with the existing one. 
-
-During the repair, 
-However, few of the contributions on model repair take into account of negative information, while negative instances according to certain KPIs are ignored. 
-
-Few researches incorporates the negative information from event log on model repair. This article focuses on  incorporating both positive and negative instances to repair model, in order to provide a model with better precision. 
-
-Firstly, directly-follows relation of activities are analyzed respectively from an existing process model in form of Petri net,  positive and negative instances of the event log. Then, a directly-follows graph is built from those directly-follows relations and subsequently transferred into a process tree and Petri net. Based on the process tree, long-term dependency is analyzed and added on the final model in Petri net.
-
-In comparison to current technologies, the methods proposed in this articles provide better result with respect on precision in most cases. 
+\input{chapters/abstract.tex}
 %\end{abstract}
 
 \tableofcontents
